--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #a0e919;
+  --primary: #c226e9;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -152,12 +152,12 @@ sup {
 }
 
 a {
-  color: #a0e919;
+  color: #c226e9;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #71a610;
+  color: #9112b1;
   text-decoration: underline;
 }
 
@@ -542,7 +542,7 @@ pre code {
 }
 @media (min-width: 576px) {
   .container {
-    max-width: 540px;
+    max-width: 412px;
   }
 }
 @media (min-width: 768px) {
@@ -557,7 +557,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    max-width: 1600px;
   }
 }
 
@@ -571,7 +571,7 @@ pre code {
 
 @media (min-width: 576px) {
   .container-sm, .container {
-    max-width: 540px;
+    max-width: 412px;
   }
 }
 @media (min-width: 768px) {
@@ -586,7 +586,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1140px;
+    max-width: 1600px;
   }
 }
 .row {
@@ -1723,21 +1723,21 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #e4f9bf;
+  background-color: #eec2f9;
 }
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #cef487;
+  border-color: #df8ef4;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #daf7a8;
+  background-color: #e8abf7;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #daf7a8;
+  background-color: #e8abf7;
 }
 
 .table-secondary,
@@ -2010,9 +2010,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #d0f48d;
+  border-color: #e39af5;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .form-control::placeholder {
   color: #6c757d;
@@ -2418,7 +2418,7 @@ textarea.form-control {
 }
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
@@ -2429,33 +2429,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #212529;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  color: #fff;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .btn-primary:hover {
-  color: #212529;
-  background-color: #89c913;
-  border-color: #81bd12;
+  color: #fff;
+  background-color: #ad15d3;
+  border-color: #a414c8;
 }
 .btn-primary:focus, .btn-primary.focus {
-  color: #212529;
-  background-color: #89c913;
-  border-color: #81bd12;
-  box-shadow: 0 0 0 0.2rem rgba(141, 204, 27, 0.5);
+  color: #fff;
+  background-color: #ad15d3;
+  border-color: #a414c8;
+  box-shadow: 0 0 0 0.2rem rgba(203, 71, 236, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #212529;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  color: #fff;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #212529;
-  background-color: #81bd12;
-  border-color: #79b111;
+  color: #fff;
+  background-color: #a414c8;
+  border-color: #9a13bc;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(141, 204, 27, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(203, 71, 236, 0.5);
 }
 
 .btn-secondary {
@@ -2669,28 +2669,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #a0e919;
-  border-color: #a0e919;
+  color: #c226e9;
+  border-color: #c226e9;
 }
 .btn-outline-primary:hover {
-  color: #212529;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  color: #fff;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #a0e919;
+  color: #c226e9;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #212529;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  color: #fff;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2870,11 +2870,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #a0e919;
+  color: #c226e9;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #71a610;
+  color: #9112b1;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -3148,7 +3148,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #a0e919;
+  background-color: #c226e9;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3473,19 +3473,19 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #a0e919;
-  background-color: #a0e919;
+  border-color: #c226e9;
+  background-color: #c226e9;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #d0f48d;
+  border-color: #e39af5;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #e3f9bc;
-  border-color: #e3f9bc;
+  background-color: #f0c8f9;
+  border-color: #f0c8f9;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
@@ -3529,17 +3529,17 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #a0e919;
-  background-color: #a0e919;
+  border-color: #c226e9;
+  background-color: #c226e9;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(160, 233, 25, 0.5);
+  background-color: rgba(194, 38, 233, 0.5);
 }
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(160, 233, 25, 0.5);
+  background-color: rgba(194, 38, 233, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3549,7 +3549,7 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(160, 233, 25, 0.5);
+  background-color: rgba(194, 38, 233, 0.5);
 }
 
 .custom-switch {
@@ -3580,7 +3580,7 @@ input[type=button].btn-block {
   transform: translateX(0.75rem);
 }
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(160, 233, 25, 0.5);
+  background-color: rgba(194, 38, 233, 0.5);
 }
 
 .custom-select {
@@ -3599,9 +3599,9 @@ input[type=button].btn-block {
   appearance: none;
 }
 .custom-select:focus {
-  border-color: #d0f48d;
+  border-color: #e39af5;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-select:focus::-ms-value {
   color: #495057;
@@ -3657,8 +3657,8 @@ input[type=button].btn-block {
   opacity: 0;
 }
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #d0f48d;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  border-color: #e39af5;
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-file-input[disabled] ~ .custom-file-label, .custom-file-input:disabled ~ .custom-file-label {
   background-color: #e9ecef;
@@ -3713,13 +3713,13 @@ input[type=button].btn-block {
   outline: none;
 }
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 .custom-range::-moz-focus-outer {
   border: 0;
@@ -3728,7 +3728,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #a0e919;
+  background-color: #c226e9;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3740,7 +3740,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #e3f9bc;
+  background-color: #f0c8f9;
 }
 .custom-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -3754,7 +3754,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #a0e919;
+  background-color: #c226e9;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3766,7 +3766,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-moz-range-thumb:active {
-  background-color: #e3f9bc;
+  background-color: #f0c8f9;
 }
 .custom-range::-moz-range-track {
   width: 100%;
@@ -3783,7 +3783,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #a0e919;
+  background-color: #c226e9;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3795,7 +3795,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-ms-thumb:active {
-  background-color: #e3f9bc;
+  background-color: #f0c8f9;
 }
 .custom-range::-ms-track {
   width: 100%;
@@ -3902,7 +3902,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #a0e919;
+  background-color: #c226e9;
 }
 
 .nav-fill .nav-item {
@@ -4535,13 +4535,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #a0e919;
+  color: #c226e9;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #71a610;
+  color: #9112b1;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4549,7 +4549,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4564,8 +4564,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4640,16 +4640,16 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #212529;
-  background-color: #a0e919;
+  color: #fff;
+  background-color: #c226e9;
 }
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #212529;
-  background-color: #81bd12;
+  color: #fff;
+  background-color: #a414c8;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(160, 233, 25, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(194, 38, 233, 0.5);
 }
 
 .badge-secondary {
@@ -4789,15 +4789,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #53790d;
-  background-color: #ecfbd1;
-  border-color: #e4f9bf;
+  color: #651479;
+  background-color: #f3d4fb;
+  border-color: #eec2f9;
 }
 .alert-primary hr {
-  border-top-color: #daf7a8;
+  border-top-color: #e8abf7;
 }
 .alert-primary .alert-link {
-  color: #334b08;
+  color: #400d4d;
 }
 
 .alert-secondary {
@@ -4909,7 +4909,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #a0e919;
+  background-color: #c226e9;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4987,8 +4987,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #a0e919;
-  border-color: #a0e919;
+  background-color: #c226e9;
+  border-color: #c226e9;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5130,17 +5130,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #53790d;
-  background-color: #e4f9bf;
+  color: #651479;
+  background-color: #eec2f9;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #53790d;
-  background-color: #daf7a8;
+  color: #651479;
+  background-color: #e8abf7;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #53790d;
-  border-color: #53790d;
+  background-color: #651479;
+  border-color: #651479;
 }
 
 .list-group-item-secondary {
@@ -5994,13 +5994,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #a0e919 !important;
+  background-color: #c226e9 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #81bd12 !important;
+  background-color: #a414c8 !important;
 }
 
 .bg-secondary {
@@ -6122,7 +6122,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #a0e919 !important;
+  border-color: #c226e9 !important;
 }
 
 .border-secondary {
@@ -9673,11 +9673,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #a0e919 !important;
+  color: #c226e9 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #71a610 !important;
+  color: #9112b1 !important;
 }
 
 .text-secondary {
