--- a/main.scss
+++ b/main.scss
@@ -1,8 +1,42 @@
 // Your variable overrides
 $theme-colors: (
-  "primary": #a0e919,
+  "primary": #c226e9,
   "danger": #16fa01
 );
+
+
+// Grid breakpoints
+//
+// Define the minimum dimensions at which your layout will change,
+// adapting to different screen sizes, for use in media queries.
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
+
+// Grid containers
+//
+// Define the maximum width of `.container` for different screen sizes.
+
+$container-max-widths: (
+  sm: 412px,
+  md: 720px,
+  lg: 960px,
+  //xl: 1140px
+  xl: 1600px
+) !default;
+
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
+
+$grid-columns:                12 !default;
+$grid-gutter-width:           30px !default;
+$grid-row-columns:            6 !default;
 
 // Bootstrap and its default variables
 @import "node_modules/bootstrap/scss/bootstrap.scss"
